// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render breadcrumbs with one element 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationHelmet
    title="My Project"
  />
  <React.Fragment
    key="my-project"
  >
    <QualifierIcon
      className="spacer-right"
      qualifier="TRK"
    />
    <Link
      className="link-base-color link-no-underline"
      onlyActiveOnIndex={false}
      style={Object {}}
      title="My Project"
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "my-project",
          },
        }
      }
    >
      My Project
    </Link>
  </React.Fragment>
</header>
`;

exports[`should render organization 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationHelmet
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
    title="My Project"
  />
  <React.Fragment>
    <OrganizationAvatar
      organization={
        Object {
          "key": "foo",
          "name": "The Foo Organization",
          "projectVisibility": "public",
        }
      }
    />
    <OrganizationLink
      className="link-base-color link-no-underline spacer-left"
      organization={
        Object {
          "key": "foo",
          "name": "The Foo Organization",
          "projectVisibility": "public",
        }
      }
    >
      The Foo Organization
    </OrganizationLink>
    <span
      className="slash-separator"
    />
  </React.Fragment>
  <React.Fragment
    key="my-project"
  >
    <QualifierIcon
      className="spacer-right"
      qualifier="TRK"
    />
    <Link
      className="link-base-color link-no-underline"
      onlyActiveOnIndex={false}
      style={Object {}}
      title="My Project"
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "my-project",
          },
        }
      }
    >
      My Project
    </Link>
  </React.Fragment>
</header>
`;
